kubernetes/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata: 
  name: "istio-ingress"
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - 
      http: 
        paths: 
          - 
            path: /items
            pathType: Prefix
            backend: 
              serviceName: item
              servicePort: 8080
          - 
            path: /reviews
            pathType: Prefix
            backend: 
              serviceName: item
              servicePort: 8080
          - 
            path: /payments
            pathType: Prefix
            backend: 
              serviceName: payment
              servicePort: 8080
          - 
            path: /reservations
            pathType: Prefix
            backend: 
              serviceName: reservation
              servicePort: 8080
          - 
            path: /myPages
            pathType: Prefix
            backend: 
              serviceName: mypage
              servicePort: 8080
