kubernetes/istio-policy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-reservation-network-rule
spec:
  hosts:
  - reservation
  http:
  - route:
    - destination:
        host: reservation
    timeout: 0.15s
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,retriable-4xx-stream
